--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>gifly</title>
     <meta charset="utf-8" />
-    <meta name="title" content="hip" />
+    <meta name="title" content="gifly" />
     <meta name="description" content="dank gifs and memes" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
